fixed height of slider to avoid jump before images have loaded

--- a/sass/_nivo-slider-ourtheme.scss
+++ b/sass/_nivo-slider-ourtheme.scss
@@ -19,6 +19,8 @@ Supports Thumbs: true
     -webkit-box-shadow: 0px 1px 5px 0px #4a4a4a;
     -moz-box-shadow: 0px 1px 5px 0px #4a4a4a;
     box-shadow: 0px 1px 5px 0px #4a4a4a;
+	
+	height: 299px;
 }
 .theme-default .nivoSlider img {
 	position:absolute;
